# Graphite

./: .gitignore  123.md  CLAUDE.md  CLAUDE_2.md  Graphite 基础语法.md  Graphite 完整语法示例.md  PERSISTENT_NOTES_DO_NOT_DELETE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
branding/: README.md
scripts/: build-logo-assets.ps1  download-chromium.ps1
src/: index.css  joplin__turndown-plugin-gfm.d.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file.rs  mod.rs  watcher.rs
src/components/: App.tsx
src/components/Common/: ConfirmDialog.tsx  ContextMenu.tsx  ErrorBoundary.tsx  PromptDialog.tsx
src/components/Editor/: Editor.tsx  EditorPlaceholder.tsx  TabBar.tsx
src/components/Editor/extensions/: MermaidExtension.ts
src/components/Editor/menus/: BubbleMenu.tsx  SearchBar.tsx  SlashMenu.tsx  Toolbar.tsx
src/components/Editor/plugins/: searchPlugin.ts
src/components/Export/: RenderedDocument.tsx  export-render.css
src/components/Modals/: CommandPalette.tsx  ExportModal.tsx  SettingsModal.tsx  shortcuts.ts
src/components/Sidebar/: ActivityBar.tsx  FileTree.tsx  OutlinePanel.tsx  Sidebar.tsx
src/components/Theme/themes/: forest.css  ocean.css  sepia.css  warm.css
src/components/TitleBar/: TitleBar.tsx
src/hooks/: useFileWatcher.ts  useSession.ts
src/plugins/: index.ts
src/stores/: cssThemeStore.ts  editorStore.ts  fileStore.ts  themeStore.ts  uiStore.ts
