[package]
name = "graphite"
version = "0.2.1"
description = "WYSIWYG Markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "graphite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
image = { version = "0.25", default-features = false, features = ["png"] }
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt", "time"] }
futures-util = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
zip = "2"
